update readme and xsd version